trying some fixes for projects/typewriter/background and mobile and lightbulb styling on safari

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,6 +32,10 @@ body::before {
   left: 0;
   right: 0;
   bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  height: 100dvh; /* Dynamic viewport height for iOS */
+  min-height: -webkit-fill-available; /* Fallback for older iOS */
   background-image: url("./assets/backgroundImage.webp");
   background-size: cover;
   background-repeat: no-repeat;
@@ -41,6 +45,10 @@ body::before {
   will-change: transform;
 }
 
+/* Add this to html for better iOS support */
+html {
+  height: -webkit-fill-available;
+}
 
 .no-scroll {
   height: 100dvh;
@@ -64,11 +72,9 @@ body::before {
 }
 
 @media screen and (max-width: 30.625rem) {
-  @media screen and (max-width: 30.625rem) {
   body::before {
     background-image: url("./assets/backgroundImageMobile.webp");
   }
-}
   
   body {
     -webkit-text-size-adjust: 100%;
