--- a/client/src/containers/home/home.css
+++ b/client/src/containers/home/home.css
@@ -320,10 +320,11 @@
 
 @media (hover: hover) and (pointer: fine) {
     .imageContainer:hover .lightbulb {
-    transform: translateY(-155%);
-    opacity: 1;
-    filter: drop-shadow(0px 0px 0px white)
-            drop-shadow(0px 0px 0.05rem yellow)
+        transform: translateY(-155%);
+        opacity: 1;
+        filter: 
+            drop-shadow(0px 0px 0px white)
+            drop-shadow(0px 0px 0.15rem yellow)
             drop-shadow(0px 0px 0.05rem yellow)
             drop-shadow(0px 0px 0.05rem white)
             drop-shadow(0px 0px 0.50rem yellow)
@@ -337,7 +338,15 @@
 
 @keyframes typewriter1 {
     to {
-        left: 5.5ch;
+        left: 60%;
+    }
+}
+
+@supports (-webkit-touch-callout: none) {
+    @keyframes typewriter1 {
+        to {
+            left: calc(6ch + 0.3em); /* Increased offset for iOS */
+        }
     }
 }
 
